Alignment fix

--- a/CSS/Portfolio.css
+++ b/CSS/Portfolio.css
@@ -71,7 +71,7 @@
 .responsive {
     width: 120%;
     height: 100%;
-    margin-top: -10%;
+    margin-top: -8%;
 }
 
 
